Thu Jul 16 14:48:04 1998  Nick Clifton  <nickc@cygnus.com>

	* gcc.c (do_spec_1): Cope with %g/%u/%U options which do not have
	a suffix.

Fri Jul 17 03:24:40 1998  Hans-Peter Nilsson  <hp@axis.se>

	* extend.texi (Explicit Reg Vars): Typo: change "may deleted" into "may
	be deleted" 

Thu Jul 16 14:48:47 1998  Jeffrey A Law  (law@cygnus.com)

	* mn10300.c (count_tst_insns): New arg oreg_countp.  Callers changed.
	Simplify tests for clearing an address register.
	(expand_prologue): Corresponding changes.

	* mn10300.md (movXX patterns): Make sure the destination is an
	ADDRESS_REG when substituting "zero_areg" for (const_int 0).
	(logical patterns): Split into expanders + patterns
	(zero and sign extension patterns): Similarly.
	(shift patterns): Similarly.

Thu Jul 16 01:17:44 1998  Richard Henderson  <rth@cygnus.com>

	* loop.c (emit_iv_add_mult): Scan the entire insn list generated
	for the sequence, recording base values.

Wed Jul 15 10:49:55 1998  Richard Henderson  <rth@cygnus.com>

	* i386.h (CPP_CPU_SPEC): Remove -Asystem(unix).

Tue Jul 14 14:15:30 1998  Nick Clifton  <nickc@cygnus.com>

	* gcc.c: Remove ANSI-C ism from --help code.

	* toplev.c: Support --help with USE_CPPLIB.

Tue Jul 14 14:46:08 1998  Jeffrey A Law  (law@cygnus.com)

	* configure.in: Rework gas feature code to work with symlink based
	source trees.

	* extend.texi: Clarify some issues related to local variables
	assigned to explicit registers.

	* mn10300.md (mulsi): Turn into expander + pattern.

	* mn10300.md (movsi, movsf, movdi, movdf): Remove "x" from I -> a
	alternative.

Tue Jul 14 07:41:59 1998  Richard Earnshaw (rearnsha@arm.com)

	* arm/tcoff.h (USER_LABEL_PREFIX): Make it empty to match coff.h.

Tue Jul 14 03:02:44 1998  Jeffrey A Law  (law@cygnus.com)

	* version.c: Bump again to distinguish mainline tree from the
	egcs-1.1 branch.

Tue Jul 14 02:20:38 1998  Jeffrey A Law  (law@cygnus.com)

	* version.c: Bump to avoid problems with old spec files during
	bootstrap.
