@@ -1,3 +1,8 @@
+Fri Jul 17 03:26:12 1998  Rihcard Earnshaw (rearnsha@arm.com)
+
+	* tree.c (valid_machine_attribute): Only create a new type variant if
+	there is a decl to use it.
+
 Thu Jul 16 14:48:04 1998  Nick Clifton  <nickc@cygnus.com>
 
 	* gcc.c (do_spec_1): Cope with %g/%u/%U options which do not have
